fixed title display on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,7 +188,7 @@ input, select, textarea {
 	}
 
 	h1 {
-		font-size: 3.75em;
+		font-size: 2.75em;
 		font-weight: 700;
 		line-height: 0.3;
 		margin: 0 0 1em 0;
